--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Alejandro\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=/Users/alejandronicolas/Library/Android/sdk
+flutter.sdk=/Users/alejandronicolas/development/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
