--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.15.8
+  intl: ^0.17.0
   audioplayers: ^0.13.2
 
   # The following adds the Cupertino Icons font to your application.
@@ -31,6 +31,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_name:
+  name: "Kall"
 
 
 # For information on the generic Dart part of this file, see the
